# chemist-ai

./: .gitignore  KETCHER_AI_TOOLS.md  README.md  package-lock.json  package.json  pyproject.toml
backend/: requirements.txt  verify_search_tool.py
backend/app/: main.py  models.py
backend/app/ai/: agent.py
backend/app/chemistry/: constants.py  molecule.py  substructures.py  tools.py
backend/tests/: test_agent_fixes.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/ChatPanel/: ChatPanel.test.tsx  index.tsx
frontend/src/components/ClipboardPanel/: index.tsx
frontend/src/components/DiffActionBar/: index.tsx
frontend/src/components/KetcherEditor/: index.tsx
frontend/src/components/MoleculeCanvas/: AtomNode.tsx  BondEdge.tsx  index.tsx
frontend/src/hooks/: useApothecary.ts  useClipboard.ts  useMolecule.ts  useToast.tsx
frontend/src/types/: apothecary.ts  chat.ts  clipboard.ts  molecule.ts
